Fix nav z-index issue Switch quotes

--- a/src/components/page-layout/header/header.module.scss
+++ b/src/components/page-layout/header/header.module.scss
@@ -5,6 +5,7 @@
 @import "./sticky-nav";
 
 .header {
+    z-index: 500;
     @include fontMedium;
     position: relative;
     display: flex;
